<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBrain"
        android:layout_width="398dp"
        android:layout_height="274dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/brain_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/_660743599_2_flomaster_club_p_mozg_cheloveka_kartinki_dlya_detei_krasivo_2" />

    <TextView
        android:id="@+id/textViewNameOfGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberComposition"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBrain"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textViewRegulationsOfGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regulationsOfGame"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameOfGame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewRegulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="12dp"
        android:text="@string/regulations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegulationsOfGame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewExampleHead"
        android:layout_width="wrap_content"
        android:textColor="@color/purple_500"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exampleHead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegulations"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/example"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExampleHead"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExample" />
</androidx.constraintlayout.widget.ConstraintLayout>